--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CLOUD_NAME=dgszmkfk1
-CLOUD_API_KEY=482855457562655
-CLOUD_API_SECRET=QdeGH72yvyqcTpgMzJ1011upEyg
+CLOUD_NAME=
+CLOUD_API_KEY=
+CLOUD_API_SECRET=
